--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
         </div>
         <div class="row">
             <hr/>
-            <p>Azat Mardan (<a href="http://twitter.com/azat_co">@azat_co</a>)</p> </div>
+            <p>Michael Davis (<a href="http://twitter.com/azat_co">@azat_co</a>)</p> </div>
+    </div>
     </div>
 </body>
 </html>
