--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <link type="text/css" rel="stylesheet" href="css/bootstrap.css" />
-    <script src="js/jquery.js" type="text/javascript"></script>
+    <script src="bower_components/jquery/dist/jquery.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
